Fixed S3 logging Schema to have CAPITAL first letters.

--- a/cloudaux/orchestration/aws/s3.md
+++ b/cloudaux/orchestration/aws/s3.md
@@ -37,19 +37,19 @@ CloudAux can build out a JSON object describing an S3 Bucket.
       },
       "LifecycleRules": [
         {
-          "expiration": {
-            "days": 365
+          "Expiration": {
+            "Days": 365
           },
-          "id": "deleteoldstuff",
-          "prefix": "/doesntactuallyexist",
-          "status": "Enabled"
+          "ID": "deleteoldstuff",
+          "Prefix": "/doesntactuallyexist",
+          "Status": "Enabled"
         }
       ],
       "Logging": {
-        "enabled": true,
-        "grants": [],
-        "prefix": "logs/",
-        "target": "MyS3LoggingBucket"
+        "Enabled": true,
+        "Grants": [],
+        "Prefix": "logs/",
+        "Target": "MyS3LoggingBucket"
       },
       "Policy": {
         "Statement": [
