adding details in documentation for how to use read_only flag

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 - Patrick Kelley <patrick@netflix.com>
 - Kevin Glisson <kglisson@netflix.com>
 - Mike Grima <mgrima@netflix.com>
+- Josafat Gonzalez <josafatg@netflix.com>
