--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@
 - Kevin Glisson <kglisson@netflix.com>
 - Mike Grima <mgrima@netflix.com>
 - Josafat Gonzalez <josafatg@netflix.com>
+- Curtis Castrapel <ccastrapel@netflix.com>
